<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="last_read">Last Read</string>
    <string name="daily_prayer">Prayer</string>
    <string name="schedule_pray">Prayer Schedule</string>
    <string name="other">Others</string>
    <string name="about">App Info</string>
    <string name="contact">Contact</string>
    <string name="quran">Quran</string>
    <string name="others">Others</string>
    <string name="no_internet">It seems there is a problem, pull down to reload</string>
    <string name="bismillah">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="icon_loc">location icon</string>
    <string name="icon_mosque">mosque icon</string>
    <string name="next_prayer">Next Prayer Time :</string>
    <string name="province_choose">Choose Province</string>
    <string name="city_choose">Choose City in %s</string>
    <string name="location_not_found">Location not found, search another location</string>
    <string name="last_read_surah_empty">"No surah marked yet"</string>
    <string name="shubuh">Fajr</string>
    <string name="dzuhur">Dhuhr</string>
    <string name="ashar">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isha</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Large</string>
    <string name="super_big">Very Large</string>
    <string name="find_qibla">Find Qibla Direction</string>
    <string name="found_qibla">Qibla Direction Found</string>
    <string name="north">N</string>
    <string name="south">S</string>
    <string name="east">E</string>
    <string name="west">W</string>
    <string name="setting_font">Set Verse Size</string>
    <string name="save">Save</string>
    <string name="daily_doa">Daily Prayers</string>
    <string name="alarm">Alarm</string>
    <string name="bookmark">Read Later</string>
    <string name="bookmark_empty">No surah saved</string>
    <string name="tv_city_and_total_ayah">%1$s • %2$d verses</string>
    <string name="delete_all">Delete All</string>
    <string name="are_you_sure">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_desc">If you choose delete, the surah data you previously saved will be removed.</string>
    <string name="your_location">Your Location</string>
    <string name="not_found_location">-</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="search_surah">Search Surah</string>
    <string name="search_ayah">Search Verse</string>
    <string name="fileName">%s/MuslimQ/%s.mp3</string>
    <string name="ask_audio_title">Surah %s</string>
    <string name="ask_gps_title">Search Location</string>
    <string name="ask_audio_desc">The audio of surah %s has not been downloaded yet, this requires an internet connection. Do you want to download it now?</string>
    <string name="ask_gps_desc">GPS will be used to determine your current location.</string>
    <string name="download">Download</string>
    <string name="gps">OK</string>
    <string name="play_online">Play Online</string>
    <string name="choose_manually">Choose Manually</string>
    <string name="download_surah_notif">MuslimQ - Surah %s</string>
    <string name="download_surah">Downloading Surah %s Audio</string>
    <string name="wait_download">"Please wait while the download is in progress…"</string>
    <string name="about_surah">About Surah</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="tag">Mark</string>
    <string name="app_id">ca-app-pub-5351128060428013~4196500302</string>
    <string name="banner_id">ca-app-pub-5351128060428013/8076907702</string>
    <string name="interstitial_id">ca-app-pub-5351128060428013/9948941311</string>
    <string name="not_found">No search results found</string>
    <string name="close">Close</string>
    <string name="tagging">Mark &amp; Back</string>
    <string name="ask_tagging_desc">Do you want to mark this verse as the last read verse?</string>
    <string name="ask_tagging_title">Mark Verse?</string>
    <string name="show">Show</string>
    <string name="input_number">Enter Verse Number</string>
    <string name="app_version">Version %s</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="copyright">Copyright © 2023</string>
    <string name="license">License</string>
    <string name="mit_license">MIT License\n\nCopyright © 2023 Muslim Q\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="done">Done</string>
    <string name="info">Info</string>
    <string name="see_qibla">See Qibla ></string>
    <string name="tasbih">Digital Tasbih</string>
    <string name="list_dzikir">Dhikr</string>
    <string name="list_dzikir_type">Choose Dhikr Type</string>
    <string name="plus">+</string>
    <string name="input_dzikir">Enter Dhikr</string>
    <string name="input_max_dzikir">Enter Maximum Dhikr Count</string>
    <string name="reset">Reset</string>
    <string name="max_count_dzikir">Maximum Dhikr Count</string>
    <string name="minus">-</string>
    <string name="sound_notif"><![CDATA[Adhan & Notifications]]></string>
    <string name="only_notif">Notifications Only</string>
    <string name="setting_notif">Notification Settings</string>
    <string name="custom_dzikir_empty">No custom dhikr saved</string>
    <string-array name="tipe_dzikir">
        <item>General</item>
        <item>Morning Dhikr</item>
        <item>Evening Dhikr</item>
        <item>Dhikr After Prayer</item>
        <item>Custom</item>
    </string-array>
    <string name="target_count">/ %1$s</string>
    <string name="muadzin">Choose Muezzin</string>
    <string name="adzan_regular">Regular Adhan</string>
    <string name="adzan_shubuh">Fajr Adhan</string>
    <string name="focus_mode"><![CDATA[Focus Mode>>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asmaul_husna">Asmaul Husna</string>
    <string name="menu_read_later">Read Later</string>
    <string name="menu_dark_mode">Dark Mode</string>
    <string name="menu_asmaul_husna">Asmaul Husna</string>
    <string name="menu_digital_tasbih">Digital Tasbih</string>
    <string name="menu_notification_settings">Notification Settings</string>
    <string name="menu_choose_muezzin">Choose Muezzin</string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_languages">Languages</string>


    <string name="notif_desc_template">It is time to perform %1$s prayer for the region %2$s</string>

</resources>
