<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/jadwal_solat_menu_item"
            android:icon="@drawable/ic_shalat"
            android:title="@string/schedule_pray" />
        <item
            android:id="@+id/kiblah_menu_item"
            android:icon="@drawable/ic_compass"
            android:title="@string/kiblah" />
        <item
            android:id="@+id/doa_menu_item"
            android:icon="@drawable/ic_doa"
            android:title="@string/daily_prayer" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/about_menu_item"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />

            <item
                android:id="@+id/support_menu_item"
                android:icon="@drawable/ic_support"
                android:title="@string/contact" />
        </menu>
    </item>
</menu>