<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/are_you_sure_desc"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_confirm"
        android:fontFamily="@font/poppins_semibold"
        android:paddingHorizontal="20dp"
        android:paddingVertical="7dp"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:alpha="0.8"
        app:layout_constraintEnd_toStartOf="@id/tv_confirm"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>