<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_base"
    tools:context=".presentation.view.tasbih.DzikirFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="16dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:paddingTop="1dp"
            android:text="@string/list_dzikir_type"
            android:textColor="@color/green_base"
            android:textSize="18sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_add"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="12dp"
            android:checkable="false"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/plus"
            android:textColor="@color/white_always"
            app:chipBackgroundColor="@color/green_base"
            app:chipCornerRadius="8dp"
            app:chipStrokeColor="@color/green_base"
            app:chipStrokeWidth="1dp"
            app:ensureMinTouchTargetSize="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="parallax"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            app:cardBackgroundColor="@color/white_second"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:contentPaddingBottom="4dp"
            app:contentPaddingTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner_dzikir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                tools:listitem="@layout/item_spinner" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dzikir"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        android:overScrollMode="never"
        android:paddingBottom="70dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_spinner"
        tools:layout_editor_absoluteX="10dp"
        tools:listitem="@layout/item_list_dzikir" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_negative_case"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_empty"
            android:layout_width="210dp"
            android:layout_height="210dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="empty.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/custom_dzikir_empty"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>